--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_messaging: ^15.2.4
+  cloud_firestore: ^5.6.5
+  flutter_login: ^5.0.0
+  firebase_auth: ^5.5.1
+  timezone: ^0.10.0
+  flutter_local_notifications: ^19.0.0
+  firebase_core: ^3.12.1
+  googleapis_auth: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -18,4 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+  assets:
+    - assets/msg.json
