--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,16 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   firebase_core: ^3.12.1
   googleapis_auth: ^1.6.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/logo.png"
 
 flutter:
   uses-material-design: true
