--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_core: ^3.12.1
   googleapis_auth: ^1.6.0
   flutter_launcher_icons: ^0.14.3
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.4
 
 dev_dependencies:
   flutter_test:
