--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   image_picker: ^1.1.2
   firebase_storage: ^12.4.4
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
