--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,7 @@
 include: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    depend_on_referenced_packages: ignore
+    file_names: ignore
+    library_private_types_in_public_api: ignore
+    use_build_context_synchronously: ignore
